--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/cannon": "^3.1.2",
     "@react-three/drei": "5.3.1",
     "@react-three/fiber": "6.2.2",
     "@react-three/postprocessing": "2.0.3",
